Disabling display list 2D canvas by default

As a temporary fix for bug 721727, we are disabling display list 2D
canvas by default.  With this change, display list mode is only engaged
when specifying the --force-display-list-2d-canvas command line option.

BUG=721727

TBR=zmo@chromium.org

Change-Id: I26f0caa3b62506c8d2d051bec208a94c1f51341f
Reviewed-on: https://chromium-review.googlesource.com/563519
Reviewed-by: Justin Novosad <junov@chromium.org>
Reviewed-by: Fernando Serboncini <fserb@chromium.org>
Commit-Queue: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485371}
Former-commit-id: 3750a7881ce851e03ce6177dca30307eb4a7f5c6