content/test/gpu/gpu_tests/pixel_expectations.py
@@ -65,3 +65,7 @@ class PixelExpectations(GpuTestExpectations):
               ['mac', 'linux', 'win', 'android'], bug=735228)
     self.Flaky('Pixel_OffscreenCanvasTransferAfterStyleResize',
               ['mac', 'linux', 'win', 'android'], bug=735171)
+
+    # TODO(junov): update reference images
+    self.Fail('Pixel_CSSFilterEffects', ['mac'], bug=721727)
+    self.Fail('Pixel_CSSFilterEffects_NoOverlays', ['mac'], bug=721727)
